Add deathcont command
Added a command to view player kills

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,6 @@
 main: com.hitaledo.mcnohit.App
 name: mcnohit
 version: 1.0
+commands:
+  deathcont:
+    description: Ver la cantidad de muertes de un jugador
