--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       run: mvn clean install
 
     - name: Upload JAR
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: mcnohit
-        path: target/mcnohit.jar
+        path: target/mcnohit-1.0-SNAPSHOT.jar
